--- a/apps/backend-ws/package.json
+++ b/apps/backend-ws/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js"
+    "start": "node dist/index.js",
+    "dev": "concurrently \"tsc -w\" \" node --watch dist/index.js\""
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +17,10 @@
   },
   "dependencies": {
     "ws": "^8.18.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.5",
+    "@types/ws": "^8.5.14",
+    "typescript": "^5.7.3"
   }
 }
