--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -9,10 +9,17 @@
     "./message": {
       "types": "./src/message-types.ts",
       "default": "./dist/message-types.js"
+    },
+    "./user": {
+      "types": "./src/user-types.ts",
+      "default": "./dist/user-types.js"
     }
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "zod": "^3.24.2"
   }
 }
