--- a/apps/backend-ws/package.json
+++ b/apps/backend-ws/package.json
@@ -16,8 +16,9 @@
     "bufferutil": "^4.0.9"
   },
   "dependencies": {
-    "ws": "^8.18.1",
-    "@repo/types": "*"
+    "@repo/types": "*",
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
