feat: add matchmaking confirmation flow

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -17,6 +17,10 @@
     "./match": {
       "types": "./src/match-types.ts",
       "default": "./dist/match-types.js"
+    },
+    "./matchmaking": {
+      "types": "./src/matchmaking-types.ts",
+      "default": "./dist/matchmaking-types.js"
     }
   },
   "devDependencies": {
